--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 <body>
   <div class="container main">
-    <div id="section1" class="py-1 mb-5 menubar">
+
+    <!-- The Header is successfully integrated to the dev -->
+    <!-- <div id="section1" class="py-1 mb-5 menubar">
       <div class="flexleft">
         <i class="bi bi-person-plus-fill menu-item"></i>
       </div>
@@ -33,12 +35,18 @@
         <span><i class="bi bi-bell menu-item"></i></span>
         <span><i class="bi bi-person-circle menu-item"></i></span>
       </div>
-    </div>
+    </div> -->
 
-    <div id="section2" class="my-4 searchbar">
+
+
+    <!-- The SearchBar is successfully integrated to the dev -->
+    <!-- <div id="section2" class="my-4 searchbar">
       <input type="text" placeholder="Search room...">
-    </div>
+    </div> -->
 
+
+
+    <!-- The Rooms is successfully integrated to the standard dev env -->
     <div id="section3" class="my-3 rooms-grid">
       <!-- <div class="container"> -->
         <div class="card rooms-subgrid">
