--- a/vue-club/public/index.html
+++ b/vue-club/public/index.html
@@ -19,11 +19,12 @@
     <link rel="stylesheet" href="styles.css">
 
   </head>
-  <body>
+  <body 
+    style="background-color: #f9f9f9;" >
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app"  class="container"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
